@startuml

title __FRAGMENT's Class Diagram__\n

  namespace com.itbird {
    namespace fragment {
      class com.itbird.fragment.BlankFragment {
          {static} - ARG_PARAM1 : String
          {static} - ARG_PARAM2 : String
          - TAG : String
          - mParam1 : String
          - mParam2 : String
          + BlankFragment()
          {static} + newInstance()
          + onAttach()
          + onCreate()
          + onCreateView()
          + onDestroy()
          + onDestroyView()
          + onDetach()
          + onHiddenChanged()
          + onResume()
          + onStart()
          + onStop()
          + onViewCreated()
      }
    }
  }
  

  namespace com.itbird {
    namespace fragment {
      class com.itbird.fragment.FragmentTestActivity {
          {static} - TAG : String
          + onResume()
          + onStart()
          + onStop()
          # onCreate()
          # onDestroy()
          # onPause()
      }
    }
  }
  

  com.itbird.fragment.BlankFragment -up-|> androidx.fragment.app.Fragment
  com.itbird.fragment.FragmentTestActivity -up-|> androidx.fragment.app.FragmentActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
